allowed side bar to expand

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1832,6 +1832,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     margin-bottom: 0;
     padding-top: 60px;
     z-index: 1;
+    flex: 0 0 340px;
   }
 
   .sidebar-info { flex-direction: column; }
