changed ... to wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1856,7 +1856,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .contacts-list { grid-template-columns: 1fr; }
 
   .contact-info :is(.contact-link) {
-    white-space: nowrap;
+    overflow-wrap: anywhere;
     overflow: hidden;
     text-overflow: ellipsis;
   }
