changed from elipses to wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1840,7 +1840,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .avatar-box img { width: 150px; }
 
   .info-content .name {
-    white-space: nowrap;
+    overflow-wrap: anywhere;
     text-align: center;
   }
 
