replaced weird missing apostrophe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*-----------------------------------*\
+﻿/*-----------------------------------*\
   #style.css
 \*-----------------------------------*/
 
@@ -832,6 +832,16 @@ main {
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
+
+.timeline-text ul {
+  margin-left: 1.25rem;
+  padding-left: 0;
+}
+
+.timeline-text ul li {
+  list-style: disc;
+}
+
 
 
 /**
@@ -1884,5 +1894,15 @@ textarea.form-input::-webkit-resizer { display: none; }
 	 */
 
   .timeline-text { max-width: 700px; }
+
+.timeline-text ul {
+  margin-left: 1.25rem;
+  padding-left: 0;
+}
+
+.timeline-text ul li {
+  list-style: disc;
+}
+
 
 }
