--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,15 +832,15 @@ main {
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
-
 .timeline-text ul {
-  margin-left: 1.25rem;
-  padding-left: 0;
+  margin: 0;
+  padding-left: 1.25rem;
 }
 
 .timeline-text ul li {
   list-style: disc;
 }
+
 
 
 
@@ -1895,14 +1895,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .timeline-text { max-width: 700px; }
 
-.timeline-text ul {
-  margin-left: 1.25rem;
-  padding-left: 0;
-}
 
-.timeline-text ul li {
-  list-style: disc;
 }
 
 
-}
