--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -766,7 +766,11 @@ main {
 /*-----------------------------------*\
   #RESUME
 \*-----------------------------------*/
-
+.hr {
+  border: 0;
+  border-top: 1px solid #e5e7eb; /* light gray */
+  margin: 1.25rem 0;             /* top/bottom spacing */
+}
 .article-title { margin-bottom: 30px; }
 
 
